logs/action/web/main/hash.log
2026-03-07 00:37:20,609 - ERROR - Compilation failed for hash:
2026-03-07 00:37:20,609 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/sha512/sha512.c:101:27: warning: shift count >= width of type [-Wshift-count-overflow]
  101 |     ctx->count[1] += (len >> 61);
      |                           ^  ~~
1 warning generated.
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:22:5: error: use of undeclared identifier 'sha256_ctx'
   22 |     sha256_ctx ctx;
      |     ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:23:18: error: use of undeclared identifier 'ctx'
   23 |     sha256_init(&ctx);
      |                  ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:24:20: error: use of undeclared identifier 'ctx'
   24 |     sha256_update(&ctx, (const uint8_t *)"abc", 3);
      |                    ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:25:19: error: use of undeclared identifier 'ctx'
   25 |     sha256_final(&ctx, digest);
      |                   ^
4 errors generated.
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -Wall -ffile-prefix-map=.=. -fmacro-prefix-map=.=. -Wno-builtin-macro-redefined -D__DATE__= -D__TIME__= -D__TIMESTAMP__= -I/home/runner/work/NextSSL/NextSSL/src -I/home/runner/work/NextSSL/NextSSL/src/include -I/home/runner/work/NextSSL/NextSSL/src/primitives -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/blake3 -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/memory_hard/utils -I/home/runner/work/NextSSL/NextSSL/src/legacy/alive -I/home/runner/work/NextSSL/NextSSL/src/legacy/unsafe -I/home/runner/work/NextSSL/NextSSL/src/utils -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_THREADING -DBLAKE3_ATOMICS=0 -DEXCLUDE_SPHINCS /home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c -c -o /tmp/emscripten_temp_a4pyjwy3/wasm_selftest_41.o' failed (returned 1)

2026-03-07 00:45:48,864 - ERROR - Compilation failed for hash:
2026-03-07 00:45:48,864 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/sha512/sha512.c:101:27: warning: shift count >= width of type [-Wshift-count-overflow]
  101 |     ctx->count[1] += (len >> 61);
      |                           ^  ~~
1 warning generated.
cache:INFO: generating system asset: symbol_lists/ece1525b84111752f32f4228734387712c6fd9f4.json... (this will be cached in "/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/symbol_lists/ece1525b84111752f32f4228734387712c6fd9f4.json" for subsequent builds)
cache:INFO:  - ok
wasm-ld: error: symbol exported via --export not found: nextssl_sha256_init
wasm-ld: error: symbol exported via --export not found: nextssl_sha256_update
wasm-ld: error: symbol exported via --export not found: nextssl_sha256_final
wasm-ld: error: symbol exported via --export not found: nextssl_keccak256
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/wasm-ld -o /home/runner/work/NextSSL/NextSSL/bin/web/main/hash.wasm --no-entry -L/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot/lib/wasm32-emscripten /tmp/emscripten_temp_u3jq87wf/keccak_0.o /tmp/emscripten_temp_u3jq87wf/sha3_1.o /tmp/emscripten_temp_u3jq87wf/sha3_224_2.o /tmp/emscripten_temp_u3jq87wf/sha3_384_3.o /tmp/emscripten_temp_u3jq87wf/shake_4.o /tmp/emscripten_temp_u3jq87wf/blake2b_5.o /tmp/emscripten_temp_u3jq87wf/argon2i_6.o /tmp/emscripten_temp_u3jq87wf/core_7.o /tmp/emscripten_temp_u3jq87wf/thread_8.o /tmp/emscripten_temp_u3jq87wf/argon2_9.o /tmp/emscripten_temp_u3jq87wf/encoding_10.o /tmp/emscripten_temp_u3jq87wf/ref_11.o /tmp/emscripten_temp_u3jq87wf/argon2d_12.o /tmp/emscripten_temp_u3jq87wf/argon2id_13.o /tmp/emscripten_temp_u3jq87wf/blake3_14.o /tmp/emscripten_temp_u3jq87wf/blake3_portable_15.o /tmp/emscripten_temp_u3jq87wf/blake3_dispatch_16.o /tmp/emscripten_temp_u3jq87wf/sha256_17.o /tmp/emscripten_temp_u3jq87wf/blake2b_18.o /tmp/emscripten_temp_u3jq87wf/sha224_19.o /tmp/emscripten_temp_u3jq87wf/sha512_20.o /tmp/emscripten_temp_u3jq87wf/blake2s_21.o /tmp/emscripten_temp_u3jq87wf/ripemd320_22.o /tmp/emscripten_temp_u3jq87wf/sha0_23.o /tmp/emscripten_temp_u3jq87wf/ripemd256_24.o /tmp/emscripten_temp_u3jq87wf/has160_25.o /tmp/emscripten_temp_u3jq87wf/ripemd128_26.o /tmp/emscripten_temp_u3jq87wf/md4_27.o /tmp/emscripten_temp_u3jq87wf/md2_28.o /tmp/emscripten_temp_u3jq87wf/sha1_29.o /tmp/emscripten_temp_u3jq87wf/nt_30.o /tmp/emscripten_temp_u3jq87wf/md5_31.o /tmp/emscripten_temp_u3jq87wf/whirlpool_32.o /tmp/emscripten_temp_u3jq87wf/ripemd160_33.o /tmp/emscripten_temp_u3jq87wf/aes_ecb_34.o /tmp/emscripten_temp_u3jq87wf/aes_core_35.o /tmp/emscripten_temp_u3jq87wf/primitive_memory_hard_36.o /tmp/emscripten_temp_u3jq87wf/legacy_alive_37.o /tmp/emscripten_temp_u3jq87wf/primitive_fast_38.o /tmp/emscripten_temp_u3jq87wf/legacy_unsafe_39.o /tmp/emscripten_temp_u3jq87wf/primitive_sponge_xof_40.o /tmp/emscripten_temp_u3jq87wf/wasm_selftest_41.o /home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot/lib/wasm32-emscripten/crt1.o -lGL-getprocaddr -lal -lhtml5 -lstandalonewasm-nocatch -lstubs -lc -ldlmalloc -lcompiler_rt -lc++-noexcept -lc++abi-noexcept -lsockets -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr /tmp/tmpz4zupqxrlibemscripten_js_symbols.so --strip-debug --export=nextssl_wasm_selftest --export=nextssl_sha256 --export=nextssl_sha256_init --export=nextssl_sha256_update --export=nextssl_sha256_final --export=nextssl_sha512 --export=nextssl_sha224 --export=nextssl_sha384 --export=nextssl_blake3 --export=nextssl_argon2id --export=nextssl_argon2i --export=nextssl_argon2d --export=nextssl_sha3_256 --export=nextssl_sha3_512 --export=nextssl_keccak256 --export=nextssl_shake128 --export=nextssl_shake256 --export=nextssl_sha1 --export=nextssl_md5 --export=nextssl_md2 --export=nextssl_md4 --export=emscripten_stack_get_current --export=_emscripten_stack_restore --export=_emscripten_stack_alloc --export-if-defined=__start_em_asm --export-if-defined=__stop_em_asm --export-if-defined=__start_em_lib_deps --export-if-defined=__stop_em_lib_deps --export-if-defined=__start_em_js --export-if-defined=__stop_em_js --export-table -z stack-size=65536 --no-growable-memory --initial-heap=16777216 --table-base=1 --global-base=1024' failed (returned 1)

